# route-optimization-app

./: CMakeLists.txt  README.md
include/: graph.h  import.h  pathfinding.h  render.h  ui.h  ui_panel.h
src/: edges.csv  graph.c  import.c  main.c  map_script.ipynb  pathfinding.c  render.c  ui.c  ui_panel.c
